updating copy paste ability for website

--- a/content/list_comprehension.ipynb
+++ b/content/list_comprehension.ipynb
@@ -17,11 +17,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Key Ideas\n",
     "* List Comprehensions can be used to create more condensed for loops"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ":::python\n",
+    "print(\"The triple-colon syntax will *not* show line numbers.\")\n"
    ]
   },
   {
@@ -96,6 +111,13 @@
    "source": [
     "Here is a breakdown of what is happening within the comprehension"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "raw",
